tests/fixtures/syntax/valid/logical_any_block.repor
case "logical any block" {
  $ true
  assert {
    any {
      exit 0
      exit 1
    }
  }
}
