tests/fixtures/syntax/invalid/or_block_not_supported.repor
case "or block not supported" {
  $ true
  assert {
    or {
      exit 0
      exit 1
    }
  }
}
